Revert "Fix layout issues"

--- a/WebApp/dublinbikes/static/main.css
+++ b/WebApp/dublinbikes/static/main.css
@@ -1,8 +1,9 @@
 body {
     background: #fafafa;
     color: #333333;
-    margin-top: 6rem;
-    
+    margin: 0;
+    margin-top: 3.5rem;
+    overflow: hidden;
   }
   
   h1, h2, h3, h4, h5, h6 {
@@ -153,16 +154,12 @@ body {
 
 
 #map-container {
-  width: 100vw; 
+  width: 100vw;
   height: calc(100vh - 56px);
   margin: 0;
   overflow: hidden;
   position: relative;
 
-}
-
-.map-shrink {
-  height: calc(100vh - 106px) !important; 
 }
 
 #info-div {
@@ -270,7 +267,6 @@ body {
   height: 20px;
   padding-right: 5px;
 }
-
 
 .legend {
   font-size: 13px;
